# inbyggda_system_iot24

./: .gitignore  README.md
components/adc_one/: CMakeLists.txt
components/analog_led/: CMakeLists.txt
components/binary_led/: binary_led.cpp
components/bit_bang/: CMakeLists.txt
components/blink_led/: CMakeLists.txt  blink_led.cpp
components/button/: button.cpp
components/gpio/: CMakeLists.txt
components/helper_component/: helper_component.cpp
components/interrupts/: CMakeLists.txt
components/led_controller/: CMakeLists.txt
components/myTask/: CMakeLists.txt  myTask.cpp
components/nvs/: CMakeLists.txt  nvs.cpp
components/printer/: Kconfig.projbuild  printer.cpp
components/watch_dog_interrupts/: CMakeLists.txt  watch_dog_interrupts.cpp
ovning/FreeRtos/: CMakeLists.txt  FreeRtos.code-workspace
ovning/bluetooth/: .gitignore  CMakeLists.txt
ovning/minne/: CMakeLists.txt  partitions.csv
ovning/ovning4_I2C/: CMakeLists.txt
ovning/ovning_1/: README.md
ovning/ovning_2/: .gitignore  CMakeLists.txt  ovning_2.code-workspace
ovning/ovning_3_watchDog/: .gitignore  CMakeLists.txt
ovning/ovning_4_uart_i2c/: CMakeLists.txt
ovning/sleepMode/: CMakeLists.txt
project/project1/: CMakeLists.txt
project/projectLed/: CMakeLists.txt
project/projectLed/main/: CMakeLists.txt  main.cpp  projectLed.code-workspace
project/projectLed/main/ulp/: ulp.c
traning/analogLed-in-C/: CMakeLists.txt
traning/interrupts/: interrupts.cpp
traning/traning_1/: CMakeLists.txt  traning_1.code-workspace
webb/: package-lock.json  package.json  server.js
(+79 files in other folders)
